@@ -23,13 +23,14 @@ import org.jspecify.annotations.NonNull;
 import org.testcontainers.containers.BindMode;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.wait.strategy.Wait;
+import org.testcontainers.images.builder.Transferable;
 import org.testcontainers.utility.DockerImageName;
 
 /**
  * A test container for running a block node server instance.
  */
 public class BlockNodeContainer extends GenericContainer<BlockNodeContainer> {
-    private static final String BLOCK_NODE_VERSION = "0.41.0";
+    private static final String BLOCK_NODE_VERSION = "0.43.0-rc1";
     private static final DockerImageName DEFAULT_IMAGE_NAME =
             DockerImageName.parse("ghcr.io/hiero-ledger/hiero-block-node:" + BLOCK_NODE_VERSION);
     private static final int GRPC_PORT = 40840;
@@ -37,6 +38,13 @@ public class BlockNodeContainer extends GenericContainer<BlockNodeContainer> {
     private static final String HIER0_BLOCK_NODE_GROUP_PATH = "org/hiero/block-node";
     private static final String STATE_DIR_IN_CONTAINER = "/opt/hiero/block-node/application-state";
     private static final String RSA_BOOTSTRAP_FILE_NAME = "rsa-bootstrap-roster.json";
+    private static final String LOGGING_CONFIG_IN_CONTAINER = "/opt/hiero/block-node/logs/config/logging.properties";
+    private static final String BLOCK_PIPELINE_LOG_LEVEL = "FINE";
+    private static final String JAVA_TOOL_OPTIONS_VALUE = "-Djava.util.logging.config.file="
+            + LOGGING_CONFIG_IN_CONTAINER + " -Xlog:gc,gc+init,gc+cpu:stderr:time,uptime,level,tags"
+            // The container is a Docker-daemon sibling, outside this job's cgroup, so without this its
+            // JVM sizes thread pools and heap for the whole host rather than the CPUs this job has.
+            + " -XX:ActiveProcessorCount=" + Runtime.getRuntime().availableProcessors();
     private static final Object PLUGINS_LOCK = new Object();
     private static final List<String> REQUIRED_PLUGIN_ARTIFACTS = List.of(
             "facility-messaging",
@@ -58,17 +66,17 @@ public class BlockNodeContainer extends GenericContainer<BlockNodeContainer> {
             Map.entry("disruptor-4.0.0.jar", MAVEN_CENTRAL_BASE_URL + "/com/lmax/disruptor/4.0.0/disruptor-4.0.0.jar"),
             // Transitive deps of the block-verification plugin
             Map.entry(
-                    "hedera-cryptography-wraps-3.8.1.jar",
+                    "hedera-cryptography-wraps-3.13.0.jar",
                     MAVEN_CENTRAL_BASE_URL
-                            + "/com/hedera/cryptography/hedera-cryptography-wraps/3.8.1/hedera-cryptography-wraps-3.8.1.jar"),
+                            + "/com/hedera/cryptography/hedera-cryptography-wraps/3.13.0/hedera-cryptography-wraps-3.13.0.jar"),
             Map.entry(
-                    "hedera-cryptography-hints-3.8.1.jar",
+                    "hedera-cryptography-hints-3.13.0.jar",
                     MAVEN_CENTRAL_BASE_URL
-                            + "/com/hedera/cryptography/hedera-cryptography-hints/3.8.1/hedera-cryptography-hints-3.8.1.jar"),
+                            + "/com/hedera/cryptography/hedera-cryptography-hints/3.13.0/hedera-cryptography-hints-3.13.0.jar"),
             Map.entry(
-                    "hedera-common-nativesupport-3.8.1.jar",
+                    "hedera-common-nativesupport-3.13.0.jar",
                     MAVEN_CENTRAL_BASE_URL
-                            + "/com/hedera/common/hedera-common-nativesupport/3.8.1/hedera-common-nativesupport-3.8.1.jar"),
+                            + "/com/hedera/common/hedera-common-nativesupport/3.13.0/hedera-common-nativesupport-3.13.0.jar"),
             Map.entry(
                     "antlr4-runtime-4.13.2.jar",
                     MAVEN_CENTRAL_BASE_URL + "/org/antlr/antlr4-runtime/4.13.2/antlr4-runtime-4.13.2.jar"));
@@ -108,13 +116,43 @@ public class BlockNodeContainer extends GenericContainer<BlockNodeContainer> {
 
         // Expose the gRPC port for block node communication
         this.addFixedExposedPort(port, GRPC_PORT);
+        // Raise block node log levels so the streaming pipeline is visible in the container log.
+        this.withCopyToContainer(Transferable.of(loggingProperties()), LOGGING_CONFIG_IN_CONTAINER);
+
         this.withNetworkAliases("block-node-" + blockNodeId)
                 .withEnv("VERSION", BLOCK_NODE_VERSION)
+                .withEnv("JAVA_TOOL_OPTIONS", JAVA_TOOL_OPTIONS_VALUE)
                 // The health endpoint is served on the same HTTP/2 port as gRPC (40840), which is
                 // incompatible with testcontainers' HTTP/1.1 wait strategy. Use a log-message check
                 // instead; BlockNodeNetwork.awaitGrpcReadiness() provides the gRPC-level confirmation.
                 .waitingFor(Wait.forLogMessage(".*Started BlockNode Server.*", 1)
                         .withStartupTimeout(Duration.ofMinutes(2)));
+    }
+
+    /**
+     * The block node logs nothing per-block at INFO, so a stalled acknowledgement leaves no trace at
+     * all. FINE on these packages reports each block received, verified and persisted. The formatter
+     * must be named here: setting {@code java.util.logging.config.file} makes BlockNodeApp skip its
+     * own {@code CleanColorfulFormatter} wiring.
+     */
+    private static String loggingProperties() {
+        return """
+                .level=INFO
+                org.hiero.block.level=INFO
+                org.hiero.block.node.block.verification.level=%1$s
+                org.hiero.block.node.stream.publisher.level=%1$s
+                org.hiero.block.node.blocks.files.recent.level=%1$s
+                io.grpc.level=INFO
+                io.helidon.level=INFO
+                com.sun.jmx.interceptor.level=INFO
+                javax.management.level=INFO
+                com.sun.net.httpserver.level=WARNING
+                com.sun.net.httpserver.ServerImpl.level=WARNING
+                com.sun.net.httpserver.ExchangeImpl.level=WARNING
+                handlers=java.util.logging.ConsoleHandler
+                java.util.logging.ConsoleHandler.level=ALL
+                java.util.logging.ConsoleHandler.formatter=org.hiero.block.node.app.logging.CleanColorfulFormatter
+                """.formatted(BLOCK_PIPELINE_LOG_LEVEL);
     }
 
     private static String pluginsDirInContainer() {
